# CNN-RNN-LSTM-Scratch

./: .gitignore  README.md  pyproject.toml  requirements.txt
doc/: K03_G24_Laporan.docx
src/cnn/: model.py  utils.py
src/cnn/layers/: conv2d.py  flatten.py  locally_connected.py  pooling.py
src/cnn/notebooks/: 01_baseline_conv2d.ipynb  baseline_conv2d.ipynb  layer-1-32-3x3-avgpool.ipynb  layer-1-32-3x3-maxpool.ipynb  layer-1-32-5x5-avgpool.ipynb  layer-1-32-5x5-maxpool.ipynb  layer-1-64-3x3-avgpool.ipynb  layer-1-64-3x3-maxpool.ipynb  layer-1-64-5x5-avgpool.ipynb  layer-1-64-5x5-maxpool.ipynb  layer-2-32-64-3x3-avgpool.ipynb  layer-2-32-64-3x3-maxpool.ipynb  layer-2-32-64-5x5-avgpool.ipynb  layer-2-32-64-5x5-maxpool.ipynb  layer-2-64-128-3x3-avgpool.ipynb  layer-2-64-128-3x3-maxpool.ipynb  layer-2-64-128-5x5-avgpool.ipynb  layer-2-64-128-5x5-maxpool.ipynb  locally_connected.ipynb  locally_connected_scratch.ipynb  scratch_vs_keras.ipynb
src/rnn_lstm/: decoder_lstm.py  decoder_rnn.py
src/rnn_lstm/layers/: embedding.py  lstm.py  simple_rnn.py
src/rnn_lstm/notebooks/: 1_preprocess.ipynb  2_train_lstm.ipynb  2_train_rnn.ipynb  3_eval_lstm.ipynb  3_eval_rnn.ipynb  4_eval_comparison.ipynb
src/shared/: activations.py  layer.py
