[project]
name = "cnn-rnn-lstm-scratch"
version = "0.1.0"
description = "Scratch implementations of CNN, RNN, and LSTM models"
requires-python = ">=3.10,<3.12"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "seaborn>=0.12.0",
    "matplotlib>=3.7.0",
    "tensorflow>=2.12.0",
    "scikit-learn>=1.3.0",
    "Pillow>=10.0.0",
    "nltk>=3.8.1",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
]

[tool.uv]
package = false